--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 -->
 
-  <div class="parallax-container valign-wrapper" id="desktop-only">
+  <div class="parallax-container valign-wrapper" >
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">          
